# distributed-restaurant

./: README.md  demo.py  pyproject.toml  tasks.py
distributed_restaurant/: Makefile  __init__.py
distributed_restaurant/models/: Client.py  Order.py  OrderState.py  Restaurant.py  RestaurantItem.py  RestaurantKitchen.py
distributed_restaurant/routes/: __init__.py  client.py  order.py  restaurant.py
tests/: test_distributed_restaurant.py
